--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,8 +115,10 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    box-sizing: border-box;
   }
   body {
     @apply bg-background text-foreground;
+
   }
 }
